projects in work4 added

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                             <a href="https://github.com/SUNDARAVEL7203/jobportal_frontend" target="_blank">Code</a>
                         </div>
 
-                        <div class="project__tags">
+                        <div class="projects__tags">
                             <span>React</span>
                             <span>Node.js</span>
                             <span>MongoDB</span>
