--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Sundaravel</span><br>MERN Developer
                 </h1>
 
-                <a href="https://drive.google.com/file/d/187tyjl0xpPO77EkfLGStuvNdY4Bfio8m/view" class="button">Resume</a>
+                <a href="https://drive.google.com/file/d/187tyjl0xpPO77EkfLGStuvNdY4Bfio8m/view"
+                    class="button">Resume</a>
             </div>
 
             <div class="home__social">
@@ -72,7 +73,7 @@
                     <g mask="url(#mask0)">
                         <path
                             d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" x="50" y="60" href="assets/img/perfil.png" />
+                        <image class="home__blob-img" x="50" y="60" href="assets/img/emojihuman.png" />
                     </g>
                 </svg>
             </div>
@@ -89,10 +90,14 @@
 
                 <div>
                     <h2 class="about__subtitle">I'm Sundaravel</h2>
-                    <p class="about__text"> Motivated and detail-oriented fresher with a strong foundation in web development and programming, seeking an
-                        entry-level role as a Full Stack Developer or Software Engineer. Proficient in MERN stack technologies,
-                        cloud-based solutions, and interactive application development. Eager to contribute technical skills and innovative
-                        problem-solving abilities to a dynamic team while growing professionally in a challenging environment.</p>
+                    <p class="about__text"> Motivated and detail-oriented fresher with a strong foundation in web
+                        development and programming, seeking an
+                        entry-level role as a Full Stack Developer or Software Engineer. Proficient in MERN stack
+                        technologies,
+                        cloud-based solutions, and interactive application development. Eager to contribute technical
+                        skills and innovative
+                        problem-solving abilities to a dynamic team while growing professionally in a challenging
+                        environment.</p>
                 </div>
             </div>
         </section>
@@ -203,7 +208,8 @@
                     <div class="projects__content">
                         <div class="projects__buttons">
                             <a href="https://hotelbooking-frontend-guvicapstone.netlify.app/" target="_blank">Demo</a>
-                            <a href="https://github.com/SUNDARAVEL7203/Hotel-booking-App-frontend" target="_blank">Code</a>
+                            <a href="https://github.com/SUNDARAVEL7203/Hotel-booking-App-frontend"
+                                target="_blank">Code</a>
                         </div>
 
                         <div class="projects__tags">
@@ -278,14 +284,15 @@
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
 
-            <div class="contact__container bd-grid">
+            <div style="text-align: center;" class="contact__container bd-grid">
                 <form action="https://formspree.io/f/xzzrbdak" method="POST" class="contact__form">
                     <input type="text" name="name" placeholder="Name" class="contact__input" required>
                     <input type="email" name="email" placeholder="Email" class="contact__input" required>
-                    <textarea name="message" placeholder="Your Message" rows="6" class="contact__input" required></textarea>
-                       <button type="submit" class="contact__button button">Submit</button>
-                  </form>
-                  
+                    <textarea name="message" placeholder="Your Message" rows="6" class="contact__input"
+                        required></textarea>
+                    <button style="text-align: center"  type="submit" class="contact__button button">Submit</button>
+                </form>
+
             </div>
         </section>
     </main>
